***** JKCEMU Version 0.2 vom 16.01.2009 *****
    * Emulation des KC85/2..4 hinzugefügt
    * Emulation des BCS3 hinzugefügt
    * Emulation von 2 RAM-Floppies mit einer Größe von je 256 KByte
      hinzugefügt, nutzbar bei AC1 (1 RAM-Floppy) und Z1013 (beide RAM-
      Floppies)
    * Externe Zeichensatzdatei kann nun eingebunden werden.
    * Bildschirmausgabe kann nun als Text in die Zwischenablage kopiert werden.
    * Dateiauswahldialog überarbeitet,
      Beim Eintippen eines Namens muss nicht mehr ENTER betätigt werden
    * Beim Laden von BIN-Dateien (reine Speicherabbilddateien) wird versucht,
      aus dem Dateinamen die Ladeadressen zu ermitteln.
    * AC1-Emulation:
        o SCCH-Monitor 10/88 inklusive SCCH-Zeichensatz integriert
        o Verbindung der CTC-Anschlüsse T0-C1 wird nun emuliert.
        o Die unteren 8 KByte können über IO-Port 1Ch-1Fh ausgeblendet und
          dafür RAM eingeblendet werden.
        o Ist die Audio-Funktion Töne ausgeben aktiviert, wird die Tonausgabe
          über PIO B0 emuliert (Lautsprecheranschluss).
    * Bugfixes:
        o Assembler:
            # Parsen von Binärzahlen führte zu einem Fehler.
            # Befehl LD SP,(nn) konnte nicht übersetzt werden.
        o AC1-Emulation:
            # Pixel pro Zeichen von 8x8 auf 8x6 geändert
            # DELETE-Taste erzeugt nun Code 7Fh
        o Z80 CTC: Kanal lief im Zählermode nicht an.

Originated-by: jkcemu-src-0.2.zip
Originated-md5: c3bacc70c74995b035fb44b1331371d6
Originated-URL: http://www.jens-mueller.org/jkcemu/download/jkcemu-src-0.2.zip

Signed-off-by: Stephan Linz <linz@li-pro.net>

--- a/src/help/ac1.htm
+++ b/src/help/ac1.htm
@@ -4,20 +4,34 @@
 
   <h2>Emulierte Hardware</h2>
     <ul>
-      <li>4 kByte ROM f&uuml;r Monitorprogramm und Mini-BASIC
-      <li>60 kByte RAM inkl. 2 kByte Bildwiederholspeicher
+      <li>4 KByte ROM f&uuml;r Monitorprogramm und Mini-BASIC
+      <li>2 KByte Bildwiederholspeicher
+      <li>2 KByte SRAM
+      <li>64 KByte DRAM
       <li>64x32 Zeichen Bildschirmgr&ouml;&szlig;e
-	  mit erweitertem Zeichengenerator
+      <li>CTC mit ein Verbindung Ausgang Kanal 0 auf Eingang Kanal 1
       <li>Kassettenrecorderanschluss
+      <li>Eine RAM-Floppy nach Zeitschrift <em>Mikroprozessortechnik</em>
+          Heft 3/1988 an der IO-Basis-Adresse E0h (RAM-Floppy A)
     </ul>
   <br><br>
 
   <h2>Im ROM enthaltene Software</h2>
     <ul>
-      <li>Monitorprogramm Version 3.1
+      <li>Je nach Einstellung Monitorprogramm Version 3.1
+	  oder SCCH-Monitor 10/88
       <li>Mini-BASIC Version 2.1
+	  (nur in Verbindung mit Monitorprogramm Version 3.1)
     </ul>
   <br><br>
+
+  <h2>Hinweise zum DRAM</h2>
+    Es werden 64 KByte DRAM emuliert.
+    Diese befinden sich physisch in einem globalen RAM-Bereich,
+    der von allen emulierten Systemen gemeinsam genutzt wird.
+    Die unteren 8 KByte liegen parallel zu ROM, Bildwiederholspeicher
+    und SRAM und k&ouml;nnen &uuml;ber die IO-Ports 1C bis 1F
+    ein- und wieder ausgeblendet werden.
 </body>
 </html>
 
