--- a/src/help/emusys.htm
+++ b/src/help/emusys.htm
@@ -3,6 +3,8 @@
   <h1>Emulierte Systeme</h1>
     <ul>
       <li><a href="ac1.htm">AC1</a>
+      <li><a href="bcs3.htm">BCS3</a>
+      <li><a href="kc85.htm">KC85/2...4</a>
       <li><a href="z1013.htm">Z1013</a>
       <li><a href="z9001.htm">Z9001, KC85/1, KC87</a>
     </ul>
