--- a/src/help/index.htm
+++ b/src/help/index.htm
@@ -84,6 +84,7 @@
     <li><a href="tips/loadfromtape.htm">Kassettenrecorder
 	(Magnettonbandger&auml;t) anschlie&szlig;en</a>
     <li><a href="z9001.htm">KC85/1</a>
+    <li><a href="kc85.htm">KC85/2...4</a>
     <li><a href="z9001.htm">KC87</a>
     <li><a href="fileformats.htm#kcbasic">KC-BASIC-Format</a>
     <li><a href="loadsavebasic.htm#kcbasic">KC-BASIC-Programme
