--- a/src/help/loadsavebasic.htm
+++ b/src/help/loadsavebasic.htm
@@ -91,7 +91,7 @@
 
 
   <h2><a name="ac1basic">Laden und Speichern von AC1-BASIC-Programmen</a></h2>
-    Dieser Rubrik bezieht sich auf BASIC-Programme f&uuml;r den 8 kByte
+    Dieser Rubrik bezieht sich auf BASIC-Programme f&uuml;r den 8 KByte
     gro&szlig;en AC1-BASIC-Interpreter Version 1.1 von 1986.
   <br><br>
 
