--- a/src/help/tools/assembler.htm
+++ b/src/help/tools/assembler.htm
@@ -54,7 +54,7 @@
     Zeichenkettenliteralen nicht zwischen Gro&szlig;- und Kleinschreibung,
     d.h., die Mnemonik der Befehle und die Register k&ouml;nnen
     sowohl gro&szlig; als auch klein geschrieben werden.
-    Bei den Marken gibt man in den Assmebler-Optionen an,
+    Bei den Marken gibt man in den Assembler-Optionen an,
     ob zwischen Gro&szlig;- und Kleinschreibung unterschieden werden soll.
   <br><br>
 
