--- a/src/help/tools/basicc/functions.htm
+++ b/src/help/tools/basicc/functions.htm
@@ -216,7 +216,7 @@
   <br>
     Die Funktionen IN und INP haben die gleiche Wirkung.
     Sie lesen ein Byte von dem durch die Adresse
-    angebenenen Eingabetor und liefern den Wert des Bytes zur&uuml;ck.
+    angegebenen Eingabetor und liefern den Wert des Bytes zur&uuml;ck.
   <br><br>
     Beim originalen AC1-Mini-BASIC und Z1013-Tiny-BASIC ist nur
     das Schl&uuml;sselwort IN erlaubt.
@@ -263,18 +263,6 @@
     und dem angegebenen Maximalwert.
   <br><br>
 
-  <h3><a name="size">SIZE</a></h3>
-    Die Funktion liefert die Gr&ouml;&szlig;e des Speicherbereichs
-    zur&uuml;ck, der sich unmittelbar an das Programm anschlie&szlig;t
-    und dessen Adresse mit der
-    <a href="functions.htm#top">TOP</a>-Funktion ermittelt werden kann.
-    Die obere Grenze dieses Speicherbereichs wird in den
-    <a href="options.htm">Compiler-Optionen</a> eingestellt.
-    Wenn die Gr&ouml;&szlig;e dieses Bereichs 32767 Bytes &uuml;bersteigt,
-    wird nur 32767 zur&uuml;ckgeliefert,
-    da das der gr&ouml;&szlig;tm&ouml;gliche positive Wert ist.
-  <br><br>
-
   <h3><a name="sgn">SGN</a></h3>
     <table border="1">
       <tr valign="top">
@@ -291,6 +279,18 @@
     Die Funktion liefert -1, wenn der Wert des angegebenen Ausdrucks
     kleiner Null ist, 1 wenn der Wert gr&ouml;&szlig;er Null ist
     und Null, wenn der Wert Null ist.
+  <br><br>
+
+  <h3><a name="size">SIZE</a></h3>
+    Die Funktion liefert die Gr&ouml;&szlig;e des Speicherbereichs
+    zur&uuml;ck, der sich unmittelbar an das Programm anschlie&szlig;t
+    und dessen Adresse mit der
+    <a href="functions.htm#top">TOP</a>-Funktion ermittelt werden kann.
+    Die obere Grenze dieses Speicherbereichs wird in den
+    <a href="options.htm">Compiler-Optionen</a> eingestellt.
+    Wenn die Gr&ouml;&szlig;e dieses Bereichs 32767 Bytes &uuml;bersteigt,
+    wird nur 32767 zur&uuml;ckgeliefert,
+    da das der gr&ouml;&szlig;tm&ouml;gliche positive Wert ist.
   <br><br>
 
   <h3><a name="sqr">SQR</a></h3>
