--- a/src/help/tools/basicc/instructions.htm
+++ b/src/help/tools/basicc/instructions.htm
@@ -334,7 +334,8 @@
       </tr>
     </table>
   <br>
-    Das Unterprogramm muss mit RETURN abgeschlossen sein.
+    Das Unterprogramm muss mit <a href="instructions.htm#return">RETURN</a>
+    abgeschlossen sein.
   <br><br>
 
   <h3><a name="goto">GOTO</a></h3>
