--- a/src/help/z1013/mon_jm_1992.htm
+++ b/src/help/z1013/mon_jm_1992.htm
@@ -10,7 +10,7 @@
     den originalen Monitor 2.02 durch eine komfortablere Version
     zu ersetzen.
     Die Hardware-Vorausetzungen sollten beibehalten werden
-    (2 kByte ROM, Folienflachtastatur).
+    (2 KByte ROM, Folienflachtastatur).
   <br><br>
 
   <h2>2. Eigenschaften</h2>
