--- a/src/help/z9001.htm
+++ b/src/help/z9001.htm
@@ -4,13 +4,13 @@
 
   <h2>Emulierte Hardware</h2>
     <ul>
-      <li>4 kByte ROM f&uuml;r Betriebssystem
-      <li>bei KC87 zus&auml;tzlich 10 kByte ROM f&uuml;r BASIC-Interpreter
-      <li>16 kByte RAM
-      <li>optional ein oder zwei 16 kByte RAM-Module;<br>
-	  Damit ist der RAM auf 32 bzw. 48 kByte vergr&ouml;&szlig;erbar.
-      <li>1 kByte Bildwiederholspeicher
-      <li>optional Farbmodul inkl. 1 kByte Farbattributspeicher
+      <li>4 KByte ROM f&uuml;r Betriebssystem
+      <li>bei KC87 zus&auml;tzlich 10 KByte ROM f&uuml;r BASIC-Interpreter
+      <li>16 KByte RAM
+      <li>optional ein oder zwei 16 KByte RAM-Module;<br>
+	  Damit ist der RAM auf 32 bzw. 48 KByte vergr&ouml;&szlig;erbar.
+      <li>1 KByte Bildwiederholspeicher
+      <li>optional Farbmodul inkl. 1 KByte Farbattributspeicher
       <li>Kassettenrecorderanschluss
     </ul>
   <br><br>
