***** JKCEMU Version 0.3 vom 24.02.2009 *****
    * Emulation des Kramer-MC hinzugefügt
    * Emulation des Hübler/Evert-MC hinzugefügt
    * AC1:
        o Emulation des Ur-AC1 hinzugefügt (64x16 Zeichen, 1 KByte SRAM,
          U402-Zeichensatz)
        o SCCH-Monitor 8.0 integriert
        o Grafik/Sound-BASIC-Interpreter V3.2 integriert
    * BCS3:
        o S/P-BASIC V3.2 integriert
        o Maschinenkode-Editor für BASIC-SE 3.1 integriert
    * KC85/2..4:
        o Zeitregime an den CTC-Eingängen verbessert
        o Optional wird auch das Zeitverhalten der Bilderzeugung emuliert.
          Dadurch sind manche speziell programmierte Effekte zu sehen.
    * Z1013:
        o Explizite Auswahl nach Z1013.01, Z1013.12, Z1013.16 und Z1013.64
          hinzugefügt,
          Damit können nun auch 1 KByte RAM emuliert werden.
        o Bei 64x16 Zeichen werden nun wie beim Original leere Zwischenzeilen
          angezeigt.
    * Assembler versteht für den Zugriff auf das niederwertige bzw.
      höherwertige Byte nun auch die Syntax LOW(<Ausdruck>) und HIGH
      (<Ausdruck>).
    * Reassembler:
        o Systemaufrufe werden erkannt und entsprechend reassembliert.
        o Suchen und Drucken hinzugefügt
    * Hex-Dateivergleich: Anzahl der unterschiedlichen Bytes wird mit
      ausgegeben.
    * Hex-Editor: Markierte Bytes können als Hex-String in die Zwischenablage
      kopiert werden.
    * Rechner: Vorzeichen ~ hinzugefügt (bitweise Negation)
    * Speicheransicht: Suchen und Drucken hinzugefügt
    * Beim Extrahieren von Text aus der Bildschirmausgabe (Kopieren, Speichern,
      im Texteditor anzeigen) werden entsprechend des Zeichensatzes auch die
      Zeichen konvertiert (z.B. deutsche Umlaute).
    * Möglichkeit zum Einfügen von Text in der Bildschirmausgabe hinzugefügt,
      Damit kann Text an das im Emulator laufende Programm übergeben werden.
    * Hilfe erweitert und korrigiert
    * Bugfixes:
        o BCS3:
            # Einstellung der RAM-Größe w

--- a/src/help/index.htm
+++ b/src/help/index.htm
@@ -22,6 +22,7 @@
     <li><a href="loadsavebasic.htm">BASIC-Programme laden und speichern</a>
     <li><a href="tips/kcc_tap_basic.htm">BASIC-Programm
 				aus KCC-/KC-TAP-Datei extrahieren</a>
+    <li><a href="bcs3.htm">BCS3</a>
     <li><a href="tools/imageviewer.htm">Bildbetrachter</a>
     <li><a href="fileformats.htm#bin">BIN-Format (Speicherabbilddateien)</a>
     <li><a href="tools/filebrowser.htm">Browser (Datei-Browser)</a>
@@ -96,6 +97,7 @@
     <li><a href="fileformats.htm#kcc">KCC-Format</a>
     <li><a href="tools/texteditor.htm#check_bracket">Klammer pr&uuml;fen</a>
     <li><a href="about.htm#conventions">Koventionen</a>
+    <li><a href="kramermc.htm">Kramer-MC</a>
   </ul>
   <br>
 
