--- a/src/help/tools/calculator.htm
+++ b/src/help/tools/calculator.htm
@@ -7,11 +7,14 @@
     Unicode-Zeichen und seinem numerischen Wert unterst&uuml;tzt.
     Neben den vier Grundrechenarten
     (Operatoren <em>+</em>, <em>-</em>, <em>*</em>, <em>/</em>)
-    beherrscht der Rechner auch die Modulorechnung (Operator <em>%</em>),
+    beherrscht der Rechner zwischen Ganzzahlausdr&uuml;cken
+    auch die Modulorechnung (Operator <em>%</em>),
     bin&auml;res Inklusiv-ODER (Operator <em>|</em>),
     bin&auml;res Exklusiv-ODER (Operator <em>^</em>)
     und bin&auml;res UND (Operator <em>&</em>).
-    Des weiteren sind eine Vielzahl von Funktionen m&ouml;glich.
+    Als Vorzeichen ist neben <em>+</em> und <em>-</em> auch <em>~</em>
+    m&ouml;glich (bitweise Negation, nur vor einem Ganzzahlausdruck).
+    Weiterhin bietet der Rechner eine Vielzahl von Funktionen.
   <br><br>
     Geben Sie bitte in dem Feld <em>Formel/Ausdruck</em> ein Zeichen
     oder einen numerischen Ausdruck ein
