--- a/src/help/z1013/mon_jm_1992.htm
+++ b/src/help/z1013/mon_jm_1992.htm
@@ -14,14 +14,14 @@
   <br><br>
 
   <h2>2. Eigenschaften</h2>
-    Das Monitorprogramm wurde mit dem Ziel entwickelt,
+    Das Monitorprogramm sollte in erster Linie
     die M&ouml;glichkeit zum Speichern und Laden von Dateien
-    im neuen Kassettenaufzeichnungsformat <em>Headersave</em> zu bieten.
+    im neuen Kassettenaufzeichnungsformat <em>Headersave</em> enthalten.
     Diese neuen Funktionen k&ouml;nnen &uuml;ber die Kommandos <tt>L</tt>
     und <tt>S</tt> sowie von Programmen aus &uuml;ber den Sprungverteiler
     aufgerufen werden.
     Funktionen f&uuml;r das Laden und Speichern im alten
-    Kassettenaufzeichnungsformat stehen aber weiterhin zur Verf&uuml;gung
+    Kassettenaufzeichnungsformat stehen aber zur Verf&uuml;gung
     (Kommandos <tt>G</tt> und <tt>P</tt> sowie Systemfunktionen 8 und 9).
   <br><br>
     Als weitere Neuerung wurde die Tastaturabfrage komfortabler gestaltet,
@@ -64,13 +64,10 @@
     die sich vom Original-Monitor 2.02 unterscheiden:
   <br><br>
 
-  <h3>D &lt;aadr&gt; [&lt;eadr&gt;]</h3>
-    Werden Anfangs- und Endadresse angegeben,
-    wird der entsprechende Speicherinhalt wie beim Original
-    ausgegeben.
-    L&auml;sst man die Endadresse weg,
-    erfolgt die Speicherausgabe blockweise als HEX-ASCII-Dump.
-    Dr&uuml;ckt man <em>ENTER</em>, wird der n&auml;chste Block ausgegeben.
+  <h3>D &lt;aadr&gt;</h3>
+    Ab der angegebenen Adresse wird der Speicherinhalt
+    blockweise als HEX-ASCII-Dump ausgegeben.
+    Dr&uuml;ckt man <em>ENTER</em>, erscheint der n&auml;chste Block.
     Jede andere Taste beendet das Kommando.
   <br><br>
 
