--- a/src/help/ac1.htm
+++ b/src/help/ac1.htm
@@ -2,36 +2,110 @@
 <body>
   <h1>Hinweise zur Emulation des AC1</h1>
 
-  <h2>Emulierte Hardware</h2>
+  <h2>1. Emulierte Hardware</h2>
     <ul>
-      <li>4 KByte ROM f&uuml;r Monitorprogramm und Mini-BASIC
-      <li>2 KByte Bildwiederholspeicher
-      <li>2 KByte SRAM
-      <li>64 KByte DRAM
-      <li>64x32 Zeichen Bildschirmgr&ouml;&szlig;e
-      <li>CTC mit ein Verbindung Ausgang Kanal 0 auf Eingang Kanal 1
+      <li>Bei eingestellten 64x16 Zeichen Bildschirmgr&ouml;&szlig;e (Ur-AC1):
+	  <ul>
+	    <li>4 KByte ROM f&uuml;r Monitorprogramm und Mini-BASIC
+	    <li>1 KByte Bildwiederholspeicher
+	    <li>1 KByte SRAM
+	  </ul>
+      <li>Bei eingestellten 64x32 Zeichen Bildschirmgr&ouml;&szlig;e:
+	  <ul>
+	    <li>4 KByte ROM f&uuml;r Monitorprogramm und Mini-BASIC
+	    <li>8 KByte Hintergrund-ROM f&uuml;r Grafik/Sound-BASIC
+	    <li>2 KByte Bildwiederholspeicher
+	    <li>2 KByte SRAM
+	    <li>64 KByte DRAM
+	    <li>Eine RAM-Floppy nach Zeitschrift
+		<em>Mikroprozessortechnik</em> Heft 3/1988
+		an der IO-Basis-Adresse E0h (RAM-Floppy A)
+	  </ul>
+      <li>CTC mit Verbindung von Ausgang Kanal 0 auf Eingang Kanal 1
       <li>Kassettenrecorderanschluss
-      <li>Eine RAM-Floppy nach Zeitschrift <em>Mikroprozessortechnik</em>
-          Heft 3/1988 an der IO-Basis-Adresse E0h (RAM-Floppy A)
     </ul>
   <br><br>
 
-  <h2>Im ROM enthaltene Software</h2>
-    <ul>
-      <li>Je nach Einstellung Monitorprogramm Version 3.1
-	  oder SCCH-Monitor 10/88
-      <li>Mini-BASIC Version 2.1
-	  (nur in Verbindung mit Monitorprogramm Version 3.1)
-    </ul>
-  <br><br>
-
-  <h2>Hinweise zum DRAM</h2>
-    Es werden 64 KByte DRAM emuliert.
+  <h3>1.1. Hinweise zum DRAM</h3>
+    Bei 64x32 Zeichen Bildschirmgr&ouml;&szlig;e werden auch
+    64 KByte DRAM emuliert.
     Diese befinden sich physisch in einem globalen RAM-Bereich,
     der von allen emulierten Systemen gemeinsam genutzt wird.
-    Die unteren 8 KByte liegen parallel zu ROM, Bildwiederholspeicher
-    und SRAM und k&ouml;nnen &uuml;ber die IO-Ports 1C bis 1F
-    ein- und wieder ausgeblendet werden.
+    Die unteren 8 KByte liegen parallel zum ROM f&uuml;r das Monitorprogramm,
+    Bildwiederholspeicher und SRAM k&ouml;nnen &uuml;ber die IO-Ports
+    14h sowie 1Ch bis 1Fh ein- und wieder ausgeblendet werden.
+  <br><br>
+
+
+  <h2>2. Im ROM enthaltene Software</h2>
+    <ul>
+      <li>Je nach Einstellung Monitorprogramm Version 3.1,
+	  SCCH-Monitor 8.0 oder SCCH-Monitor 10/88
+      <li>Mini-BASIC Version 2.1
+	  (nur in Verbindung mit Monitorprogramm Version 3.1)
+      <li>Grafik/Sound-BASIC Version 3.2
+	  (nur bei 64x32 Zeichen Bildschirmgr&ouml;&szlig;e)
+    </ul>
+  <br><br>
+
+
+  <h2>3. BASIC</h2>
+
+  <h3>3.1. Grafik/Sound-BASIC</h3>
+    Der Grafik/Sound-BASIC-Interpreter Version 3.2 liegt
+    in einem Hintergrund-ROM im Adressbereich 4000-5FFF.
+    Standardm&auml;&szlig;ig befindet sich in diesem Adressbereich RAM.
+    &Uuml;ber das Bit 1 des IO-Ports 14h kann der ROM in den Vordergrund
+    geholt und somit der BASIC-Interpreter in dem Adressbereich sichtbar
+    gemacht werden.
+  <br><br>
+    Mit den im Emulator integrierten SCCH-Monitorprogrammen k&ouml;nnen
+    Sie das BASIC mit dem Kommando <em>b</em> direkt aufrufen (Kaltstart).
+    Dabei wird auch der BASIC-ROM in den Vordergrund geholt.
+    Einen Warmstart des Interpreters f&uuml;hren Sie mit dem Kommando
+    <em>r</em> aus.
+  <br><br>
+
+  <h3>3.2. Speichern von BASIC-Programmen</h3>
+    JKCEMU bietet eine spezielle Unterst&uuml;tzung f&uuml;r das Speichern
+    und Laden von AC1-BASIC- und Mini-BASIC-Programmen.
+    Zum Speichern nutzen Sie bitte die entsprechende Funktion im Men&uuml;
+    <em>Datei</em>, Untermen&uuml; <em> BASIC-Programm</em>
+    bzw. <em>Mini-/Tiny-BASIC-Programm</em>,
+    und speichern das Programm als
+    <a href="fileformats.htm#headersave">Headersave</a>-Datei
+    mit dem Dateityp <tt>B</tt> (AC1- oder Grafik/Sound-BASIC-Programm)
+    bzw.  <tt>b</tt> (Mini-BASIC-Programm).
+  <br><br>
+    Nur wenn Sie das BASIC-Programm so speichern,
+    werden beim Laden des Programms die Systemzellen des
+    BASIC-Interpreters richtig angepasst.
+    In jedem anderen Fall k&ouml;nnen Sie zwar das BASIC-Programm laden,
+    aber im Interpreter nicht richtig nutzen.
+  <br><br>
+
+  <h3>3.3. Anzeige eines im Arbeitsspeichers befindlichen BASIC-Programms</h3>
+    Der Emulator bietet im Men&uuml; <em>Datei</em>,
+    Untermen&uuml; <em>BASIC-Programm</em>, eine Funktion zum Anzeigen
+    des im Arbeitsspeichers befindlichen BASIC-Programms im Texteditor.
+    Da die Schl&uuml;sselw&ouml;rter im BASIC-Programm in Form von Tokens
+    gespeichert werden,
+    muss JKCEMU die Tokens in ihre textuelle Form wandeln.
+    Allerdings unterscheiden sich die Tokens bei den verschiedenen
+    BASIC-Interpretern.
+    Aus diesem Grund werden die Tokens entsprechend
+    folgender Regel expandiert:
+    <ul>
+      <li>Ist in den <a href="settings.htm">Einstellungen</a>
+	  die AC1-Option <em>Monitorprogramm 3.1</em> aktiviert,
+	  werden die Tokens entsprechend dem
+	  AC1-BASIC-Interpreter Version 1.1 von Frank Heyder expandiert.
+      <li>Ist in den <a href="settings.htm">Einstellungen</a>
+          eine AC1-Option mit einem SCCH-Monitorprogramm aktiviert,
+	  werden die Tokens entsprechend dem
+	  Grafik/Sound-BASIC-Interpreter Version 3.2
+	  von Eckhard Ludwig expandiert.
+    </ul>
 </body>
 </html>
 
