--- a/src/help/emusys.htm
+++ b/src/help/emusys.htm
@@ -4,10 +4,71 @@
     <ul>
       <li><a href="ac1.htm">AC1</a>
       <li><a href="bcs3.htm">BCS3</a>
+      <li><a href="hemc.htm">H&uuml;bler/Evert-MC</a>
       <li><a href="kc85.htm">KC85/2...4</a>
+      <li><a href="kramermc.htm">Kramer-MC</a>
       <li><a href="z1013.htm">Z1013</a>
       <li><a href="z9001.htm">Z9001, KC85/1, KC87</a>
     </ul>
+  <br><br>
+
+  <h2>RAM</h2>
+    Der Arbeitsspeicher der emulierten Systeme liegt mit einigen Ausnahmen
+    in einem globalen RAM-Bereich, d.h. es wird f&uuml;r alle Systeme
+    physisch der gleiche Speicher verwendet.
+    Sie k&ouml;nnen so z.B. in der Z1013-Emulation eine Datei in den RAM laden,
+    anschlie&szlig;end in den <a href="settings.htm">Einstellungen</a>
+    auf Z9001 umstellen,
+    und die Datei befindet sich dann im Z9001-Arbeitsspeicher.
+  <br><br>
+    Spezielle Speicherbereiche, z.B. Bildwiederholspeicher,
+    werden jedoch nicht gemeinsam genutzt, da das kaum sinvoll ist.
+  <br><br>
+
+  <h2>Deutsche Umlaute</h2>
+    Manche emulierten Systeme kennen deutsche Umlaute, andere wiederum nicht.
+    Wenn ein Zeichensatz deutsche Umlaute enth&auml;lt,
+    dann anstelle von einigen ASCII-Zeichen
+    (war damals so &uuml;blich, siehe auch deutsche Variante von ISO646).
+    Die deutschen Umlaute haben somit die gleichen Codes wie einige
+    ASCII-Zeichen.
+    Aus diesem Grund mappt auch JKCEMU die Umlaute auf die Codes
+    der entsprechenden ASCII-Zeichen.
+    Wenn Sie z.B. ein <em>&auml;</em> eingeben,
+    erzeugt der Emulator den Code 5Bh,
+    der auch f&uuml;r das ASCII-Zeichen <em>[</em> steht.
+    Wenn nun der Zeichensatz deutsche Umlaute enth&auml;lt,
+    sehen Sie das <em>&auml;</em>,
+    anderenfalls die &ouml;ffnende eckige Klammer.
+  <br><br>
+    Im umgekehrten Fall, d.h. wenn Sie die Bildschirmaugabe
+    des emulierten Systems in eine Textdatei speichern
+    oder als Text in die Zwischenablage kopieren,
+    wandelt JKCEMU die Umlaute wieder in die Codes
+    des Systemzeichensatzes um, jedoch nur,
+    wenn der Zeichensatz auch Umlaute enth&auml;lt.
+  <br><br>
+    Die Tabelle zeigt die Codes,
+    die sowohl f&uuml;r deutsche Umlaute als auch f&uuml;r ASCII-Zeichen
+    stehen k&ouml;nnen:
+  <br>
+    <table border="1">
+      <tr>
+	<th>Dezimal-Code</th>
+	<th>Hex-Code</th>
+	<th>ASCII-Zeichen</th>
+	<th>Umlaut</th>
+      </tr>
+      <tr><td>64</td><td>40</td><td>&#64;</td><td>&sect;</td></tr>
+      <tr><td>91</td><td>5B</td><td>&#91;</td><td>&Auml;</td></tr>
+      <tr><td>92</td><td>5C</td><td>&#92;</td><td>&Ouml;</td></tr>
+      <tr><td>93</td><td>5D</td><td>&#93;</td><td>&Uuml;</td></tr>
+      <tr><td>123</td><td>7B</td><td>&#123;</td><td>&auml;</td></tr>
+      <tr><td>124</td><td>7C</td><td>&#124;</td><td>&ouml;</td></tr>
+      <tr><td>125</td><td>7D</td><td>&#125;</td><td>&uuml;</td></tr>
+      <tr><td>126</td><td>7E</td><td>&#126;</td><td>&szlig;</td></tr>
+    </table>
+  <br><br>
 </body>
 </html>
 
