--- a/src/help/kc85.htm
+++ b/src/help/kc85.htm
@@ -2,12 +2,12 @@
 <body>
   <h1>Hinweise zur Emulation des KC85/2...4</h1>
 
-  <h2>Emulierte Hardware</h2>
+  <h2>1. Emulierte Hardware</h2>
     Emuliert werden die Grundger&auml;te inklusive Tongeneratoren
     und Kassettenrecorderanschluss.
     Der emulierte Speicher betr&auml;gt bei:
     <ul>
-      <li>KC85/2:<br>
+      <li>KC85/2 (HC900):<br>
 	<ul>
 	  <li>4 kyte ROM
 	  <li>32 kyte RAM inklusive Bildwiederholspeicher
@@ -25,13 +25,13 @@
     </ul>
   <br>
 
-  <h3>RAM</h3>
+  <h3>1.1 RAM</h3>
     RAM 0 (0000-3FFF) und RAM 4 (4000-7FFF, nur KC85/4) liegen in einem
     globalen RAM-Bereich, der von allen emulierten Systemen gemeinsam
     genutzt wird.
   <br><br>
 
-  <h3>Tongeneratoren und Kassettenrecorderanschluss</h3>
+  <h3>1.2. Tongeneratoren und Kassettenrecorderanschluss</h3>
     Welche erzeugten T&ouml;ne vom Emulator ausgegeben werden,
     legen Sie durch Auswahl einer entsprechenden Funktion
     in dem Fenster <a href="audio.htm">Audio/Kassette</a> fest.
@@ -44,16 +44,45 @@
     d.h. des Signals, mit dem Dateien auf Kassette gespeichert werden.
   <br><br>
 
-  <h3>Zusatzmodule</h3>
+  <h3>1.3. Zusatzmodule</h3>
     Es werden keine Zusatzmodule emuliert.
   <br><br>
 
-  <h2>Im ROM enthaltene Software</h2>
+
+  <h2>2. Im ROM enthaltene Software</h2>
     <ul>
       <li>bei KC85/2: CAOS 2.2
       <li>bei KC85/3: CAOS 3.1 und KC-BASIC
       <li>bei KC85/4: CAOS 4.2 und KC-BASIC
     </ul>
+  <br><br>
+
+
+  <h2>3. Sonstiges</h2>
+
+  <h3>3.1. Zeitverhalten der Bildschirmsteuerung</h3>
+    F&uuml;r den KC85/2...4 gibt es in den
+    <a href="settings.htm">Einstellungen</a> die Option
+    <em>Zeitverhalten der Bildschirmsteuerung emulieren</em>.
+    Diese Option sollten Sie ggf. auf leistungsschw&auml;cheren Rechnern
+    ausschalten, da sie relativ viel Rechenleistung ben&ouml;tigt,
+  <br><br>
+    An den Eing&auml;ngen des Z&auml;hler-/Zeitgeberbausteins (CTC)
+    liegen der Bildsynchronimpuls und der doppelte Zeilensynchronimpuls an.
+    Dadurch ist es m&ouml;glich, Software zu schreiben,
+    die mit der Ausgabe der einzelnen Pixelzeilen auf dem Bildschirm
+    synchron l&auml;uft.
+    Manche Programmierer nutzen diese M&ouml;glichkeit aus,
+    um spezielle Effekte zu erzeugen (z.B. Farbscrolling).
+    Damit solche Effekte auch im Emulator zu sehen sind,
+    muss die Visualisierung mit dem Zeitregime an den CTC-Eing&auml;ngen
+    synchron emuliert werden.
+    Und genau das macht die Option
+    <em>Zeitverhalten der Bildschirmsteuerung emulieren</em>.
+  <br><br>
+    Es gibt allerdings nur sehr wenige Programme,
+    die solche Effekte erzeugen,
+    und bei denen somit diese Option eine Wirkung zeigt.
 </body>
 </html>
 
