--- a/src/help/z9001.htm
+++ b/src/help/z9001.htm
@@ -2,7 +2,7 @@
 <body>
   <h1>Hinweise zur Emulation des Z9001, KC85/1 und KC87</h1>
 
-  <h2>Emulierte Hardware</h2>
+  <h2>1. Emulierte Hardware</h2>
     <ul>
       <li>4 KByte ROM f&uuml;r Betriebssystem
       <li>bei KC87 zus&auml;tzlich 10 KByte ROM f&uuml;r BASIC-Interpreter
@@ -15,24 +15,11 @@
     </ul>
   <br><br>
 
-  <h2>Im ROM enthaltene Software</h2>
-    <ul>
-      <li>Z9001, KC85/1:
-	<ul>
-	  <li>Betriebssystemversion 1.2
-	</ul>
-      <li>KC87
-	<ul>
-	  <li>Betriebssystemversion 1.3
-	  <li>KC-BASIC 86
-	</ul>
-    </ul>
-  <br><br>
-
-  <h2>Tastatur</h2>
+  <h3>1.1. Tastatur</h3>
     F&uuml;r einige Tasten auf der Z9001-Tastatur gibt es &uuml;blicherweise
     keine direkten gleichnamigen Tasten auf der Tastatur des Emulator-Rechners.
     Diese Tasten werden aber trotzdem emuliert, und zwar:
+  <br>
     <table border="1">
       <tr><th>Z9001-Taste</th><th>Emuliert mittels</th></tr>
       <tr><td>Zeilenanfang</td><td>Shift-Links</td></tr>
@@ -43,6 +30,14 @@
       <tr><td>RUN</td><td>F4</td></tr>
       <tr><td>STOP</td><td>F5</td></tr>
     </table>
+  <br><br>
+
+
+  <h2>2. Im ROM enthaltene Software</h2>
+    <ul>
+      <li>Z9001, KC85/1: Betriebssystemversion 1.2
+      <li>KC87: Betriebssystemversion 1.3, KC-BASIC 86
+    </ul>
 </body>
 </html>
 
