***** JKCEMU Version 0.4 vom 17.03.2009 *****
    * Emulation des Hübler-Grafik-MC hinzugefügt
    * Emulation des LC80 hinzugefügt
    * Markieren und Kopieren von Text in der Bildschirmausgabe hinzugefügt
    * Popup-Menu im Emulationsfenster hinzugefügt
    * Helligkeit der Bildschirmausgabe einstellbar
    * Dateiauswahldialog: Beim Lesen eines Verzeichnisses erscheint nun ein
      entsprechender Statustext.
    * Einbindung externer ROM-Images: Bei Bankswitching werden die ROM-Images
      nur noch in die Bank für die Betriebssystem-ROMs eingebunden und
      überdecken nicht mehr eine eventuell vorhandene andere parallel liegende
      Speicherbank. Damit funktioniert nun auch die Einbindung eines anderen
      Monitorprogramms bzw. Betriebssystems auf Systemen mit Bankswitching.
    * AC1: erweiterter Zeichensatz (128 Zeichen) durch den Zeichensatz des
      Computerclubs Dessau (256 Zeichen) ersetzt (nur bei 2 KByte
      Bildwiederholspeicher und Monitorprogramm 3.1)
    * BCS3: S/P-BASIC V3.2 durch V3.3 ersetzt
    * Z9001: Zugriffe auf Bildwiederhol- und Farbattributspeicher verlangsamt
      (Emulation der WAIT-States hinzugefügt)
    * Bugfixes:
        o Gelegentliches Aufhängen des Emulationsthreads beseitigt
        o Texteditor: Statustext berichtigt,
          Die Positionsangabe des Cursors war falsch, wenn die Zeile
          Tabulatoren enthielt.
        o Z80: Undokumentierte Einzelbit-, Shiebe- und Rotationsbefehle mit
          IX bzw. IY führten zu einem Applikationsfehler.

Originated-by: jkcemu-src-0.4.zip
Originated-md5: 7e9e9a5b7341f240a9705bb0ad5d56f3
Originated-URL: http://www.jens-mueller.org/jkcemu/download/jkcemu-src-0.4.zip

Signed-off-by: Stephan Linz <linz@li-pro.net>

--- a/README.html
+++ b/README.html
@@ -7,7 +7,7 @@
   <meta name="Content-Language" content="de" />
   <meta name="Copyright" content="(c) 2009 Jens Mueller" />
   <meta name="Description" content="Kleincomputer-Emulator" />
-  <title>J1013 - Ein in Java entwickelter Kleincomputer-Emulator</title>
+  <title>JKCEMU - Ein in Java entwickelter Kleincomputer-Emulator</title>
  </head>
 
  <body>
@@ -73,6 +73,12 @@
       </li>
      </ul>
     </li>
+    <li>
+     Legen Sie auf dem Desktop eine
+     <em>Verkn&uuml;pfung zu einem Programm</em> an,
+     und tragen dort die in der Console/DOS-Box erfolgreich verwendete
+     Kommandozeile ein.
+    </li>
    </ol>
   <br/><br/>
 
@@ -93,11 +99,11 @@
       <li>unter Linux/Unix mit: <tt>./compile</tt></li>
       <li>unter Windows in der DOS-Box mit: <tt>compile.bat</tt></li>
      </ul>
-     Alternativ k&ouml;nnen Sie auch mit <em>ant</em> compilieren.
-     Die dazu notwendige Datei <a href="build.xml">build.xml</a> finden Sie
-     im Wurzelverzeichnis des Quelltextes.
     </li>
    </ol>
+   Alternativ k&ouml;nnen Sie auch mit <em>ant</em> compilieren.
+   Die dazu notwendige Datei <a href="build.xml">build.xml</a> finden Sie
+   im Wurzelverzeichnis des Quelltextes.
   <br/><br/>
 
   <h2>5. Kontakt</h2>
