--- a/src/help/z1013.htm
+++ b/src/help/z1013.htm
@@ -118,6 +118,10 @@
     eine Kombination aus Monitorprogramm und Tastatur ausw&auml;hlen,
     die genau der Tastatur entspricht,
     die das extern eingebundene Monitorprogramm voraussetzt.
+  <br><br>
+    Des weiteren ist das extern eingebundene Monitorprogramm
+    auch &uuml;ber den IO-Port 4 abschaltbar,
+    wenn es im Adressbereich F000-FFFF liegt.
 </body>
 </html>
 
