--- a/src/help/z9001.htm
+++ b/src/help/z9001.htm
@@ -1,6 +1,13 @@
 <html>
 <body>
   <h1>Hinweise zur Emulation des Z9001, KC85/1 und KC87</h1>
+    Z9001 ist die urspr&uuml;ngliche Bezeichnung des KC85/1.
+    Da es zwischen beiden keine funktionalen Unterschiede gibt,
+    werden sie auch zusammen als ein Computertyp emuliert.
+  <br><br>
+    Das Z9001-Betriebssystem ist auch im KC87 enthalten.
+    Deshalb meldet sich der KC87 auch als Z9001.
+  <br><br>
 
   <h2>1. Emulierte Hardware</h2>
     <ul>
