--- a/src/help/ac1.htm
+++ b/src/help/ac1.htm
@@ -106,6 +106,22 @@
 	  Grafik/Sound-BASIC-Interpreter Version 3.2
 	  von Eckhard Ludwig expandiert.
     </ul>
+  <br><br>
+
+
+  <h2>4. Sonstiges</h2>
+
+  <h3>4.1. Einbindung externer ROM-Images</h3>
+    Sie k&ouml;nnen in den <a href="settings.htm">Einstellungen</a>
+    externe ROM-Images an jeder beliebigen Adresse einbinden.
+    F&uuml;r die unteren 8 KByte des Adressraumes gilt aber,
+    dass das extern eingebundene ROM-Image nur sichtbar ist,
+    wenn der Speicher auf der Grundplatine (Betriebssystem-ROM) aktiv ist.
+    Ist in dem Bereich der DRAM aktiviert,
+    ist das eingebundene ROM-Image nicht sichtbar.
+    Damit k&ouml;nnen Sie trotzt extern eingebundener ROM-Images
+    auch Programme verwenden,
+    die nach dem Start den ROM abschalten (z.B. CP/M).
 </body>
 </html>
 
