--- a/src/help/hemc.htm
+++ b/src/help/hemc.htm
@@ -6,14 +6,25 @@
     <ul>
       <li>3 KByte ROM
       <li>61 KByte RAM inklusive Bildwiederholspeicher
-      <li>CTC an der IO-Basisadresse 14h
+      <li>CTC
+      <li>2 PIOs
     </ul>
+    Von der universellen IO-Karte werden nur die CTC und
+    die beiden PIOs emuliert.
+    Die SIO und das Kassettenrecorderinterface sowie ggf.
+    an den PIOs angeschlossene Hardware werden nicht emuliert.
   <br><br>
+
 
   <h2>2. Im ROM enthaltene Software</h2>
     <ul>
        <li>Monitorprogramm Version 2.1
     </ul>
+    Im Monitorprogramm kann man sich mit <em>HELP</em>
+    eine Liste aller Kommandos anzeigen lassen.
+    Die Liste enth&auml;lt sowohl die Kommandos des Monitorprogramm selbst
+    als auch solche,
+    die eventuell an anderen Stellen im Arbeitsspeicher zu finden sind.
   <br><br>
 </body>
 </html>
